# institutional-field-dynamics

./: .gitignore  LICENSE  README.md  pyproject.toml
beleidsdynamica_v4/: __init__.py  analyse.py  model.py  visualisatie.py
experiments/: ad_ode_dynamics.py  ad_typologies.py  ssrn_sensitivity.py
