[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beleidsdynamica-v4"
version = "0.4.0"
description = "Beleidsdynamica v4: Relationeel, Dynamisch, Attractor-Bewust"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tobias Beers", email = "tobias@kaizar.nl"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.setuptools.packages.find]
where = ["."]
